--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.441.0",
     "next": "14.2.13",
+    "next-auth": "5.0.0-beta.21",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-day-picker": "8.10.1",
